--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,7 +25,7 @@
     aliquip ex ea commodo consequat. Duis aute irure dolor in
     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-    culpa qui officia deserunt mollit anim id est laborum.
+    culpa qui officia deserunt mollit anim id est.
 </p>
 <button type="button" id="main-header-btn">Change Main Header </button>
 <button type="button" id="sub-header-btn"> Change Sub Header </button>
