completed jQuery exercises on codeup curriculum.

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,7 +8,25 @@
     <title>jQuery Exercises</title>
 </head>
 <body>
+<h1 class="title">jQuery Selectors</h1>
 
+<div id="id-container">
+    <h2 class="title">IDs</h2>
+    <p id="paragraph1" class="codeup">This is paragraph 1.</p>
+    <p id="paragraph2" class="codeup">This is paragraph 2.</p>
+</div>
+
+
+<h2 class="title">Class Names</h2>
+<p class="highlight codeup">This paragraph has the "highlight" class.</p>
+<p id="codeup" class ="">This paragraph does not have any class.</p>
+
+<h2 class="title">HTML Elements</h2>
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+</ul>
 
 <!--jQuery CDN-->
 <script
