--- a/js-warmups.html
+++ b/js-warmups.html
@@ -422,13 +422,13 @@
     // Write a function, returnLargestStudentCount, that takes in an array of classes returns the number of students in the largest class.
     // Assume at least one class object will be present in the input array with students property set to a valid positive integer.
 
-    let classes = [
-        {class: "6th grade history", students: 18},
-        {class: "7th grade history", students: 20},
-        {class: "8th grade history", students: 22},
-        {class: "4th grade history", students: 30},
-        {class: "10th grade history", students: 25}
-    ];
+    // let classes = [
+    //     {class: "6th grade history", students: 18},
+    //     {class: "7th grade history", students: 20},
+    //     {class: "8th grade history", students: 22},
+    //     {class: "4th grade history", students: 30},
+    //     {class: "10th grade history", students: 25}
+    // ];
 
     //class walk thru
     //put the variable outside of the loop so that the loop knows where to print the largest number (when not declaring function)
@@ -518,6 +518,96 @@
     etc...
 
     */
+
+
+
+    // You are given an array of runner objects, where each object represents a
+    // runner with properties name, age, and lapTimes (in seconds). Write a
+    // function called getTopRunners that takes the runners array as input and
+    // returns an array of top runners. A runner is considered top if their
+    // average lap time is 50 seconds or faster. If there are no top runners in
+    // the input array, the function should return an empty array
+
+
+    // HINT: You might want to create a function called calculateLapTimeAverage
+    // that takes in an array of numbers and returns the average
+
+
+    // Input:
+//     const runners = [
+//         { name: "Alice", age: 25, lapTimes: [50.5, 45.2, 48.8, 47.1] },
+//         { name: "Bob", age: 28, lapTimes: [55.2, 50.7, 53.3, 52.9] },
+//         { name: "Charlie", age: 24, lapTimes: [48.9, 46.3, 50.1, 49.5] },
+//         { name: "David", age: 27, lapTimes: [51.4, 50.2, 49.8, 52.3] },
+//         { name: "Eve", age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3] },
+//     ];
+//
+//     function getTopRunners(runnersArray) {
+//
+//         //declare topRunners array to print the top runners when returning
+//         let topRunners = [];
+//
+//         //loop through every piece of runnersArray
+//         for(let runner of runnersArray) {
+//
+//             //check if top runner
+//             //if true add to topRunners (if average is <= 50)
+//             if (calculateLapTimeAverage(runner.lapTimes) <= 50) {
+//
+//                 //bonus
+//                 // const topRunner = {
+//                 //     name: runner.name,
+//                 //     age: runner.age,
+//                 // };
+//                 // topRunners.push(topRunner);
+//
+//
+//                // original
+//                //  topRunners.push(runner);
+//             }
+//
+//             //if not, do nothing
+//         }
+//
+//         return topRunners;
+//         //if no top runners will return an empty array
+//     }
+//     function calculateLapTimeAverage(lapTimesArray) {
+//         let total = 0;
+//         let count = 0;
+//
+//         //loop through lapTimes array
+//         for (let lapTime of lapTimesArray) {
+//             total+= lapTime;
+//             count++;
+//         }
+//
+//         //record total amount and count
+//         return total/count;
+//         //return average
+//     }
+//
+//     console.log(getTopRunners(runners));
+//
+//     // // Expected Output:
+//     // [
+//     //     { name: 'Alice', age: 25, lapTimes: [50.5, 45.2, 48.8, 47.1] },
+//     //     { name: 'Charlie', age: 24, lapTimes: [48.9, 46.3, 50.1, 49.5] },
+//     //     { name: 'Eve', age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3] }
+//     // ]
+//
+//
+//
+// // BONUS: Each runner in the resulting array should be represented as an
+// // object containing only the name and age properties.
+// //
+// //
+// // Expected Bonus Output:
+// //         [
+// //         { name: "Alice", age: 18 },
+// //             { name: "Charlie", age: 19 },
+// //             { name: "Eve", age: 17 }
+// //         ]
 
 
 </script>
