--- a/js-warmups.html
+++ b/js-warmups.html
@@ -520,7 +520,7 @@
     */
 
 
-
+// July 10, 2023 Monday AM WARMUP
     // You are given an array of runner objects, where each object represents a
     // runner with properties name, age, and lapTimes (in seconds). Write a
     // function called getTopRunners that takes the runners array as input and
@@ -534,13 +534,13 @@
 
 
     // Input:
-//     const runners = [
-//         { name: "Alice", age: 25, lapTimes: [50.5, 45.2, 48.8, 47.1] },
-//         { name: "Bob", age: 28, lapTimes: [55.2, 50.7, 53.3, 52.9] },
-//         { name: "Charlie", age: 24, lapTimes: [48.9, 46.3, 50.1, 49.5] },
-//         { name: "David", age: 27, lapTimes: [51.4, 50.2, 49.8, 52.3] },
-//         { name: "Eve", age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3] },
-//     ];
+    const runners = [
+        { name: "Alice", age: 25, lapTimes: [50.5, 45.2, 48.8, 47.1] },
+        { name: "Bob", age: 28, lapTimes: [55.2, 50.7, 53.3, 52.9] },
+        { name: "Charlie", age: 24, lapTimes: [48.9, 46.3, 50.1, 49.5] },
+        { name: "David", age: 27, lapTimes: [51.4, 50.2, 49.8, 52.3] },
+        { name: "Eve", age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3] },
+    ];
 //
 //     function getTopRunners(runnersArray) {
 //
@@ -583,8 +583,8 @@
 //         }
 //
 //         //record total amount and count
-//         return total/count;
 //         //return average
+//         return total/count;
 //     }
 //
 //     console.log(getTopRunners(runners));
@@ -608,6 +608,46 @@
 // //             { name: "Charlie", age: 19 },
 // //             { name: "Eve", age: 17 }
 // //         ]
+
+    // July 11, 2023 AM Warmup
+    // Refactor your code from yesterday's warmup to return just the
+    // top runner
+    function getTopRunner(runnersArray) {
+
+        //before running any code, the first runner is technically the fastest
+    let topRunner = runnersArray[0];
+
+    //Loop thru array
+        for(let i = 1; i < runnersArray.length; i++) {
+
+        // Check if the runner is faster than current topRunner
+        if(calculateLapTimeAverage(runnersArray[i].lapTimes) < calculateLapTimeAverage(topRunner.lapTimes)) {
+
+        //If so, replace the topRunner
+            topRunner = runnersArray[i];
+
+        //If not, do nothing
+        }
+        }
+        //Once our loop is done, we should have the fastest runner
+        //Return topRunner
+        return topRunner;
+    }
+
+
+    function calculateLapTimeAverage(lapTimesArray) {
+        let total = 0;
+        let count = 0;
+        for (let lapTime of lapTimesArray) {
+            total += lapTime;
+            count++;
+        }
+        return total / count;
+    }
+    console.log(getTopRunner(runners));
+
+    // Expected output:
+    // { name: 'Eve', age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3] }
 
 
 </script>
