--- a/ajax-store.html
+++ b/ajax-store.html
@@ -6,35 +6,68 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AJAX Practice</title>
+    <style>
+        #products {
+            width: 100%;
+            margin-bottom: 5vh;
+        }
+
+
+    </style>
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+<h1>Tool</h1>
 
 <table id="products">
     <thead>
-    <tr>
-        <th>Title</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th>Categories</th>
+    <tr class="tool-header">
+        <th><h2>Tool</h2></th>
+        <th><h2>Stock</h2></th>
+        <th><h2>Price</h2></th>
+        <th><h2>Categories</h2></th>
     </tr>
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
 
+
+<button type="reset">Refresh Inventory List</button>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
 <script>
     (function() {
         "use strict";
         // TODO: Create an AJAX GET request for the file under data/inventory.json
+        //fetch data from api
+$.ajax("data/inventory.json").done((data) => {
+    //look thru data of api
+        console.log(data);
 
-        // TODO: Take the data from inventory.json and append it to the products table
-        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-        //             its contents and fields
-        //       HINT: You will want to target #insertProducts for your new HTML elements
+    //loop thru json array
+    for(let i=0; i<data.length; i++) {
+
+    //store each data point into a variable
+        let title = data[i].title;
+        let quantity = data[i].quantity;
+        let price = data[i].price;
+        let categories = data[i].categories;
+
+    //stored data points print into table
+    //create elements to store data points (<td>)
+        let itemTitle = $('#insertProducts').append(`<td class = title>${title} </td>`);
+        let itemQuantity = $('#insertProducts').append(`<td class = quantity>${quantity}</td>`);
+        let itemPrice = $('#insertProducts').append(`<td class = price>${price}</td>`);
+        let itemCategories = $('#insertProducts').append(`<td class = categories>${categories}</td>`);
+
+//create rows to store element and data points
+    let newItemRow = $('#insertProducts').append(`<tr class = newItem>${itemTitle} ${itemQuantity} ${itemPrice} ${itemCategories}</tr>`)
+    }
+
+});
+
     })();
+
 </script>
 </body>
 </html>
