--- a/weather-map.html
+++ b/weather-map.html
@@ -74,7 +74,7 @@
 <div id="today-weather"></div>
 
 <!--Display Weather for the next 5 days-->
-<div id="five-day-forecast" class="container"></div>
+<div id="five-day-forecast" class="card"></div>
 
 
 
