--- a/order-pizza.html
+++ b/order-pizza.html
@@ -105,7 +105,7 @@
         </div>
         <div class="crust-next row m-0">
             <div class="column bg-body-secondary p-0 d-flex">
-                <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
+                <a id="next-btn-cheese-sauce" class="btn btn-primary m-2" href="#cheese-sauce-2">Next Step ></a>
             </div>
         </div>
     </div>
@@ -171,8 +171,8 @@
         </div>
         <div class="crust-next row m-0">
             <div class="column bg-body-secondary p-0 d-flex">
-                <a class="btn btn-primary btnPrevious m-2" href="">< Previous Step</a>
-                <a class="btn btn-primary btnNext m-2" href="#">Next Step ></a>
+                <a id="previous-btn-crust" class="btn btn-primary  m-2" href="">< Previous Step</a>
+                <a id="next-btn-toppings" class="btn btn-primary m-2" href="#">Next Step ></a>
             </div>
         </div>
     </div>
@@ -213,12 +213,26 @@
                 </ul>
                 <div class="cheese-previous row m-0">
                     <div class="column bg-body-secondary p-0 d-flex">
-                        <a class="btn btn-primary btnPrevious m-2" href="#cheese-sauce-2">< Previous Step</a>
+                        <a id="previous-btn-cheese-sauce" class="btn btn-primary m-2" href="#cheese-sauce-2">< Previous Step</a>
                     </div>
                 </div>
             </div>
+        </div>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+            </script>
+            <script>
+<!--                Attempt to get next button on crust tab to switch to cheese tab -->
+               // let crustToCheese =  document.getElementById('#next-btn-cheese-sauce');
+               // let crust = document.getElementById('#crust-tab');
+               // let cheeseAndSauce = document.getElementById('#cheese-tab');
+               // crustToCheese.addEventListener('click', ()=> {
+               //     crust.setAttribute('aria-selected', 'false');
+               //     crust.classList.remove('active show');
+               //     cheeseAndSauce.setAttribute('aria-selected', 'true');
+               //     cheeseAndSauce.classList.add('active show');
+               //
+               // });
             </script>
 </body>
 
