--- a/weather-map.html
+++ b/weather-map.html
@@ -50,12 +50,12 @@
 
             <!--            Find out how to take user input and place into geocode to find coordinates of search city, and print weather status of city.-->
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark " placeholder="Search..."
+                <input id="search-input" type="search" class="form-control form-control-dark " placeholder="Search..."
                        aria-label="Search">
             </form>
             <!--            attach button to submit search form -->
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Show Me The Weather!</button>
+                <button id="search-button" type="button" class="btn btn-outline-light me-2">Show Me The Weather!</button>
             </div>
 
         </div>
