search functionality, five-day forecast, current weather, and city name all function. added plant png for bullet point.

--- a/weather-map.html
+++ b/weather-map.html
@@ -67,15 +67,16 @@
     <div id="city"></div>
 </div>
 
-<!--Map appears in here-->
-<div id="map" style="height: 20rem;" class="w-100 "></div>
-
 <!--current temperature for the day-->
 <div id="today-weather"></div>
 
-<!--Display Weather for the next 5 days-->
-<div id="five-day-forecast" class="card"></div>
+<!--Map appears in here-->
+<div id="map" style="height: 20rem;" class="w-100 "></div>
 
+<!--Display Weather for the next 5 days-->
+<div class="container m-5">
+<div id="five-day-forecast" class="row d-flex gap-5"></div>
+</div>
 
 
 
