--- a/weather-map.html
+++ b/weather-map.html
@@ -22,6 +22,10 @@
     <!--    bootstrap custom classes-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!--    font family tangerine-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
     <!--    css     -->
     <link rel="stylesheet" href="css/weather-map.css">
 
@@ -36,6 +40,7 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <!--            Home page redirect thru logo-->
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+<!--                                <img class="logo" src="img/eye-lord-GIF-unscreen.gif"/>-->
                 <img class="logo" src="img/small-purple-dragon-unscreen.gif"/>
             </a>
             <!-- navigation items-->
@@ -43,9 +48,11 @@
                 <!--                home page-->
                 <li><a href="/" class="nav-link px-2 text-secondary">Weather Today</a></li>
                 <!--                redirect to a global warming link-->
-                <li><a target="_blank" href="https://climate.nasa.gov/scientific-consensus/" class="nav-link px-2 text-white">Why is the Weather Like This?</a></li>
+                <li><a target="_blank" href="https://climate.nasa.gov/scientific-consensus/"
+                       class="nav-link px-2 text-white">Why is the Weather Like This?</a></li>
                 <!--                Link to my LinkedIn-->
-                <li><a target="_blank" href="https://www.linkedin.com/in/audrey-tan-76856b278/" class="nav-link px-2 text-white">About Dev</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/audrey-tan-76856b278/"
+                       class="nav-link px-2 text-white">About Dev</a></li>
             </ul>
 
             <!--            Find out how to take user input and place into geocode to find coordinates of search city, and print weather status of city.-->
@@ -55,7 +62,8 @@
             </form>
             <!--            attach button to submit search form -->
             <div class="text-end">
-                <button id="search-button" type="button" class="btn btn-outline-light me-2">Show Me The Weather!</button>
+                <button id="search-button" type="button" class="btn btn-outline-light me-2">Show Me The Weather!
+                </button>
             </div>
 
         </div>
@@ -63,8 +71,8 @@
 </header>
 
 <!--City name will print here-->
-<div class="city-name container">
-    <div id="city"></div>
+<div class="city-name container w-100">
+    <div id="city" class="w-100"></div>
 </div>
 
 <!--current temperature for the day-->
@@ -76,11 +84,13 @@
 <!--Display Weather for the next 5 days-->
 <div class="container w-100">
     <div class="w-100">
-<div id="five-day-forecast" class="col d-flex flex-wrap justify-content-between justify-content-center my-2"></div>
+        <div id="five-day-forecast"
+             class="col d-flex flex-wrap justify-content-between justify-content-center my-2"></div>
+    </div>
 </div>
+<div class="d-flex justify-content-center">
+    <button class="" id="go-to-shire">Go to The Shire!</button>
 </div>
-
-
 <!--bootstrap attached javascript-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
