--- a/map-filter-reduce-exercise.html
+++ b/map-filter-reduce-exercise.html
@@ -14,6 +14,8 @@
     </div>
 </div>
 
-<script src="/js/map-filter-reduce-exercise.js"></script>
+<!--<script src="/js/map-filter-reduce-exercise.js"></script>-->
+<script src="/js/map-filter-reduce.js"></script>
+
 </body>
 </html>
