--- a/promises.html
+++ b/promises.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/promises.css">
     <script src="js/keys.js"></script>
+    <script src="js/promises-async.js"></script>
 </head>
 <body>
 <div class="page-wrapper">
