completed async and await codeup exercise walk thru with Jason to append rows for 10 characters given by star wars api

--- a/promises.html
+++ b/promises.html
@@ -28,7 +28,23 @@
                 </tr>
                 </thead>
                 <tbody>
-
+                <tr>
+                    <td>
+                        <div class="d-flex gap-10 align-center">
+                            <img class="character-image" src="https://via.placeholder.com/50x50">
+                                <p class="character-name"></p>
+                            </img>
+                        </div>
+                    </td>
+                    <td>Height</td>
+                    <td>Mass</td>
+                    <td>Hair Color</td>
+                    <td>Skin Color</td>
+                    <td>Eye Color</td>
+                    <td>Birth Year</td>
+                    <td>Gender</td>
+                    <td><button>Remove</button></td>
+                </tr>
                 </tbody>
             </table>
         </div>
